// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CWidgetProgressIcon renders basic wrapper correctly 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  >
    <div
      className="progress progress-xs my-3 mb-0 "
    >
      <div
        aria-valuemax={100}
        aria-valuemin="0"
        aria-valuenow={25}
        className="progress-bar"
        role="progressbar"
        style={
          Object {
            "width": "25%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`CWidgetProgressIcon renders customized wrapper correctly 1`] = `
<div
  className="card bg-info text-white class-name"
>
  <div
    className="card-body"
  >
    <div
      className="h1 text-muted text-right mb-4"
    >
      CWidgetProgressIcon
    </div>
    <div
      className="h4 m-0"
    >
      header
    </div>
    <small
      className="text-muted text-uppercase font-weight-bold"
    >
      text
    </small>
    <div
      className="progress progress-xs my-3 mb-0 progress-white"
    >
      <div
        aria-valuemax={100}
        aria-valuemin="0"
        aria-valuenow={55}
        className="progress-bar"
        role="progressbar"
        style={
          Object {
            "width": "55.00000000000001%",
          }
        }
      />
    </div>
  </div>
</div>
`;
